Implemented AnalyticsController to provide user with endpoints to get ReadMeAnalyticsData